Revert "Agregar Driver MySQL"
This reverts commit 62ce09c41482429a1ea12b6e5818f971db0a37f4.

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -35,12 +35,10 @@ dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/EurekaBank-Project
 endorsed.classpath=
 excludes=
-file.reference.mysql-connector-j-8.4.0.jar=C:\\Users\\Usuario\\Desktop\\ING. SISTEMAS UNT\\CICLO III\\PROGRAMACION ORIENTADA A OBJETOS II\\UNIDAD 2\\mysql-connector-j-8.4.0\\mysql-connector-j-8.4.0\\mysql-connector-j-8.4.0.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${libs.absolutelayout.classpath}:\
-    ${file.reference.mysql-connector-j-8.4.0.jar}
+    ${libs.absolutelayout.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
